added how the run the demo